internal/lang/testdata/conformance/accept/build_data.gwdk
package pages

route "/welcome"

build {
  => { title: "Welcome" }
}

view {
  <main>
    <h1>{title}</h1>
  </main>
}
