internal/lang/testdata/conformance/reject/old_action_block.gwdk
// expect: old_action_block_syntax
package pages

route "/login"

act Login {
  method POST
}

view {
  <main></main>
}
